* Make product optional on opportunity line
* Restrict convert button to sale group

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11
* Allow searching reporting by record name

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Refactor reporting
* Use default customer payment term
* Allow to store currency on opportunity

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Use Date field for monthly report
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5

Version 5.6.0 - 2020-05-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Add employee on opportunities for some states
* Add contact on opportunity

Version 5.4.0 - 2019-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Use ir.calendar.month in report

Version 5.2.0 - 2019-05-06
--------------------------
* Bug fixes (see mercurial logs for details)
* Make description on sale opportunity optional

Version 5.0.0 - 2018-10-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
--------------------------
* Bug fixes (see mercurial logs for details)

Version 4.6.0 - 2017-10-30
--------------------------
* Bug fixes (see mercurial logs for details)

Version 4.4.0 - 2017-05-01
--------------------------