@@ -3,13 +3,26 @@
 this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="opportunity"/>
-    <field name="opportunity" colspan="3"/>
-    <label name="product"/>
-    <field name="product"/>
+    <field name="opportunity"/>
     <label name="sequence"/>
     <field name="sequence"/>
-    <label name="quantity"/>
-    <field name="quantity"/>
-    <label name="unit"/>
-    <field name="unit"/>
+    <notebook colspan="4">
+        <page string="General" id="general">
+            <label name="product"/>
+            <field name="product"/>
+            <newline/>
+
+            <label name="quantity"/>
+            <field name="quantity"/>
+            <label name="unit"/>
+            <field name="unit"/>
+
+            <separator name="description" colspan="4"/>
+            <field name="description" colspan="4"/>
+        </page>
+        <page string="Notes" id="notes">
+            <separator name="note" colspan="4"/>
+            <field name="note" colspan="4"/>
+        </page>
+    </notebook>
 </form>
