@@ -4,5 +4,6 @@ this repository contains the full copyright notices and license terms. -->
 <tree sequence="sequence">
     <field name="opportunity" expand="1"/>
     <field name="product" expand="1" optional="0"/>
+    <field name="summary" expand="1" optional="1"/>
     <field name="quantity" symbol="unit"/>
 </tree>
