@@ -1,3 +1,4 @@
+* Add description and note to opportunity line
 * Make product optional on opportunity line
 * Restrict convert button to sale group
 
